2007-08-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-07
	* IMPORTANT BUG FIX
	* If a child parameter of a PSet of a module already stored would
	be changed, the changes wouldn't be stored. Now they are.

2007-08-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-06
	* appropriately retrieve the arrow icons in ScrollableMenu via
	getClass().getResource()
	* set the ScrollableMenu maximum hight to 80% of the screen height
	* show the converted configuration from the beginning in the
	respective tabs
	* enable the hyper-links within the html conversion tab
	* pick up the latest parser changes (emergency scripts!)
	* picl up latest converter / browser improvements

2007-08-23  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-05
	* parser improvements:
	* missing parameters in HLTrigger are back
	* out-of-sequence errors w. the CSC*Producers and
	DTSegment*Producers gone
	* pick up latest converter changes
	
2007-08-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-04
	* bug fix: boolean parameter values would always come back 'false'
	from the database
	* pick up latest parser fix
	
2007-08-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-03
	* migrate streams
	* make Configuration.insert* more robust against invalid template
	names

2007-08-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-02
	* fix sql queries for 'fast' loading of templates (restricted to
	the ones referenced in the configuration to be converted).
	* confdb.converter.Converter fixed, takes two parameters now:
	configId *and* the index of the database setup in the ConfDBSetups
	class (1=HLT Dev, 2=OMDS)
	* pick up latest parser fixes
	* pick up latest browser fixes
	
2007-08-15  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-10-01
	* pick up latest converter / browser developments from Ulf
	* gui bugfixes